@@ -4,7 +4,7 @@ AUX tarantool.cfg 1922 SHA256 6de3f6eee2a6d3196610a9970c991d6e2eed17d6596ba665ed
 AUX tarantool.cron 156 SHA256 9369b778869b6a0917f6e1341a7453ed3a1f3958451ac07ec2788a1903573548 SHA512 ae2ac979db301c86930672e1d5f63c6bda930152d6afb1ff983efcfd7244fe9560f45637821893135f7e92fa2489eaef6872efa62a2f1605703ef70f8108789c WHIRLPOOL ac2c97b31dff4da52925d8df538424abdcd01bb3381c01a76766ba7c5f32e68ff85e0cfb5d055961bfb15901f8fb7ff5d44bbf96b7c8fc5341dbcaa8fcee3c1d
 AUX tarantool.initd 2011 SHA256 9f84b977ce1e0a7ddc9e33867aea356b1142e389918050f21516e861d816d502 SHA512 935bd300774c8284e603b3e012023640dc4365da7c2c73d6c57e32f4bdf39443e19d90b8b34c95ac2255e188813164b0412dac2edf7fee06ee5452ccfba5eeae WHIRLPOOL 9d5616fa1e1af4e145e2bd06ca371a13cbbea21839815f9f993f428eed0df1dc8009ccb28e06d068598f49fea7b070af20b433ccbfad16498549fa881a59097a
 AUX tarantool.logrotate 218 SHA256 8a96e24faa542c125134bcf8820f6c392ab5feae058a116a7f7c094b79f74d52 SHA512 5699fd14d2d022b4ea94aff96e063ec0033d9170fe15c25bb140a2e764df796899431d79998e591013351030328caf2610b774e8e95d9dd934ee02f8f32121d1 WHIRLPOOL 1415030846bcfa1f9e3e511dcaf5d748bfb0aa6309d133b93308af46e358afcc6b2de75c3c37a3814aaa5f2d774d5becf1429e60a54fabec6f2ce6914513b916
-EBUILD tarantool-1.4.9999.ebuild 4110 SHA256 eb8a613bff18df6232e7fdac785b2f6df00f8f32c48a1b7212760175ba0374a6 SHA512 885fbcce56cf8dccc37404842f27823c0e55a5635158be598bb37c4c5da91db2d19b1bb63fba947b0e8a97804ba9ba2c6f3603a8bbaef1acff76b3f7df49d449 WHIRLPOOL fa5cd93a395fb3a03ebd426584fc6a7697174745db944a31c34fe606b0670dee694f1b86934e65698e93a4b992dde13820efe05b64665277e72105c0cc46a08d
-EBUILD tarantool-9999.ebuild 4110 SHA256 eb8a613bff18df6232e7fdac785b2f6df00f8f32c48a1b7212760175ba0374a6 SHA512 885fbcce56cf8dccc37404842f27823c0e55a5635158be598bb37c4c5da91db2d19b1bb63fba947b0e8a97804ba9ba2c6f3603a8bbaef1acff76b3f7df49d449 WHIRLPOOL fa5cd93a395fb3a03ebd426584fc6a7697174745db944a31c34fe606b0670dee694f1b86934e65698e93a4b992dde13820efe05b64665277e72105c0cc46a08d
-MISC ChangeLog 247 SHA256 67e46f2e4089002927124e4b80fcf5d2cb7df3558b43609e499f526cd93cb5f1 SHA512 f595f56f86113825b08f237599bc9d3541a7e747b01f1819e0742a30a3a11fe05d67a232d2a5605b364b9c6af5035949720b4d2790a48896fa998b1c524fb116 WHIRLPOOL e0a0fab2189246c3f37a9e86559688bae2bbdba1a324e51c1a05a96789b7d08269d31c44a480d80ca380e24c689c7bfc78849cf3cf01438da934cd51ba0e586d
+EBUILD tarantool-1.4.9999.ebuild 4779 SHA256 846777d3955ff5d408b5f2d7f8201d161bc98ef783d59cd118bce67805dd1a24 SHA512 cf5ff806397a53c2e8fd8b5e710c67ea9c649788c9fad01504822734186f2e70bbee0504079f95ea58eee740a36121d72b4536bd78f701e0ac1bf823e5dcebc0 WHIRLPOOL 127b196558ad04ed197987170b322ac6474f0f2d7056d6cc656c68605244947f207c8c70af2be43770c364dd90de823c796f7b6012196d31b1af35e13dc8cd6e
+EBUILD tarantool-9999.ebuild 4779 SHA256 846777d3955ff5d408b5f2d7f8201d161bc98ef783d59cd118bce67805dd1a24 SHA512 cf5ff806397a53c2e8fd8b5e710c67ea9c649788c9fad01504822734186f2e70bbee0504079f95ea58eee740a36121d72b4536bd78f701e0ac1bf823e5dcebc0 WHIRLPOOL 127b196558ad04ed197987170b322ac6474f0f2d7056d6cc656c68605244947f207c8c70af2be43770c364dd90de823c796f7b6012196d31b1af35e13dc8cd6e
+MISC ChangeLog 364 SHA256 e0fee208879c164590d5ba62544725de81d3a12aa574d64a5f7e78034f76dffa SHA512 98631816c52f9b3b7787eadc9d9758c0bc3a92e25c13470bd54afc91612423e3cb02f0d3f742c10c99da098c2b9f78dbd9ee45f1182f847c04e1b2253afe868a WHIRLPOOL be251c51da2881b841d9235496e9fb85844a6219a8541279969a0f5e3597ffdf4bf661bed30349585966cf201b1e8367009c2b3050880b000f620b7d8e43a7b4
 MISC metadata.xml 785 SHA256 9e953dc8f4c44ac46cbe15945dadef400cd8904bfdd12b9b4d3b8498d55ed875 SHA512 dee925b5cbe5bfda1f158df20c6bb96fc65483f4654b0b0f8c9f9861fcfe7bdaaa8dfbf2ab0c5bdc46ce4b903eefe5a8c13f0b809bb026853bb80a2c16010e74 WHIRLPOOL 1fb799db55fb6411380ace777327dc110f9d7cfd8e79a6538d41ac9e3c787558a99244d4b070f51ffd558e645f4d805a6a7874b0471e72db8625a02e8f1b5eda
