@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=2
+EAPI=4
 
 CMAKE_MIN_VERSION=2.6
 # See https://bugs.launchpad.net/tarantool/+bug/1180494
@@ -23,7 +23,7 @@ esac
 
 DESCRIPTION="Tarantool - an efficient, extensible in-memory data store."
 HOMEPAGE="http://tarantool.org"
-IUSE="debug static +backtrace +libobjc-bundled +luajit-bundled +logrotate +walrotate sse2 avx doc gcov gprof"
+IUSE="debug +client +server static +backtrace +libobjc-bundled +luajit-bundled +logrotate +walrotate sse2 avx doc gcov gprof"
 
 SLOT="0"
 LICENSE="BSD-2"
@@ -33,6 +33,7 @@ RDEPEND="
 	dev-lang/perl
 	!luajit-bundled? ( >=dev-lang/luajit-2.0 )
 	luajit-bundled? ( sys-libs/libunwind )
+	client? ( sys-libs/readline sys-libs/ncurses )
 "
 
 DEPEND="
@@ -43,7 +44,10 @@ DEPEND="
 	       app-text/docbook-xsl-ns-stylesheets app-text/docbook-xsl-stylesheets )
 "
 
-#REQUIRED_USE="avx? ( sse2 )"
+REQUIRED_USE="
+	avx? ( sse2 )
+	|| ( client server )
+"
 
 TARANTOOL_HOME="/var/lib/tarantool"
 TARANTOOL_USER=tarantool
@@ -77,18 +81,29 @@ src_configure() {
 		$(cmake-utils_use_enable avx AVX)
 		$(cmake-utils_use_enable doc DOC)
 		$(cmake-utils_use_enable gcov GCOV)
-		-DENABLE_CLIENT=OFF
+		$(cmake-utils_use_enable client CLIENT)
+		-DCMAKE_SKIP_RPATH=YES
 	)
 	cmake-utils_src_configure
 }
 
 
 src_compile() {
-	cmake-utils_src_compile tarantool_box man
+	if use client; then
+		# Run "make all" in required directores to support concurrent builds
+		cmake-utils_src_compile -C connector all
+		cmake-utils_src_compile -C client all
+	fi
+	if use server; then
+		cmake-utils_src_compile tarantool_box
+		# Clear executable stack
+		# See https://bugs.launchpad.net/tarantool/+bug/1183352
+		execstack -c src/box/tarantool_box
+	fi
 	if use doc; then
 		cmake-utils_src_compile doc-autogen
 	fi
-	# TODO: add a special target for building tests into cmake
+	cmake-utils_src_compile man
 }
 
 src_test() {
@@ -96,25 +111,41 @@ src_test() {
 }
 
 src_install() {
-	# Binary intsels
-	dobin ${BUILD_DIR}/src/box/tarantool_box || die "doexe failed"
-
-	# Man page
-	doman ${BUILD_DIR}/doc/man/tarantool_box.1 || die "doman failed"
-
 	# Basic docs
 	dodoc README.md || die "dodoc failed"
 	dodoc AUTHORS || die "dodoc failed"
 	dodoc TODO || die "dodoc failed"
-	dodoc ${FILESDIR}/README.Gentoo.md || die "dodoc failed"
-	newdoc ${FILESDIR}/tarantool.cfg example.cfg || die "dodoc failed"
 
 	# User guide
 	if use doc; then
 		dodoc doc/box-protocol.txt || die "dodoc failed"
-		dodoc doc/sql.txt || die "dodoc failed"
 		dohtml ${BUILD_DIR}/doc/www-data/tarantool_user_guide.html || die "dohtml failed"
 	fi
+	
+	if use client; then
+		# Client libraries
+		cmake-utils_src_install -C connector
+		cmake-utils_src_install -C client
+
+		# Client documentation
+		if use doc; then
+			dodoc doc/sql.txt || die "dodoc failed"
+		fi
+	fi
+
+	if ! use server; then
+		return 0
+	fi
+
+	# Server binary
+	dobin ${BUILD_DIR}/src/box/tarantool_box || die "doexe failed"
+
+	# Server man pages
+	doman ${BUILD_DIR}/doc/man/tarantool_box.1 || die "doman failed"
+
+	# Server documentation
+	dodoc ${FILESDIR}/README.Gentoo.md || die "dodoc failed"
+	newdoc ${FILESDIR}/tarantool.cfg example.cfg || die "dodoc failed"
 
 	# Configuration
 	insinto /etc/tarantool
@@ -126,7 +157,6 @@ src_install() {
 	# Directory for pid files
 	keepdir /run/tarantool
 	fowners ${TARANTOOL_USER}:${TARANTOOL_GROUP} /run/tarantool
-
 
 	# Lua scrips
 	keepdir /usr/share/tarantool/lua
